--- a/day22/day22.csproj
+++ b/day22/day22.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Dir.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="State.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="readme.md" />
